# media-server

./: .gitignore  Cargo.toml  FIX-WINDOWS.md  INSTALL.md  README.md  README.zh-CN.md  index.html  package-lock.json  package.json  start-desktop.bat  start-dev.bat  start.bat  tailwind.config.js  test.html  vite.config.ts
src/: App.tsx  app.rs  index.css  lib.rs  main.rs  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/Collections/: Collections.tsx
src/components/Douyin/: DouyinInput.tsx
src/components/History/: History.tsx
src/components/Layout/: Header.tsx  Layout.tsx  Sidebar.tsx
src/components/Online/: Online.tsx
src/components/Player/: DouyinPlayer.tsx  Player.tsx
src/components/Search/: Search.tsx
src/components/Settings/: Settings.tsx
src/components/StreamPlayer/: StreamPlayer.tsx
src/components/Torrent/: Torrent.tsx
src/douyin/: mod.rs
src/lib/: utils.ts
src/metadata/: extractor.rs  mod.rs
src/metadata_scraper/: mod.rs  tmdb.rs
src/models/: media.rs
src/online/: mod.rs
src/scanner/: mod.rs  watcher.rs
src/server/: handlers.rs  mod.rs  online_handlers.rs  routes.rs  scraper_handlers.rs  torrent_handlers.rs
src/services/: api.ts
src/storage/: json_store.rs  mod.rs
src/stores/: mediaStore.ts
src/torrent/: engine.rs  magnet.rs  manager.rs  mod.rs
src/transcoder/: ffmpeg.rs  mod.rs
src/types/: index.ts
