[workspace]
members = [".", "src-tauri"]

[package]
name = "media-server"
version = "0.1.0"
edition = "2021"
description = "Local media server with streaming and transcoding"
authors = ["Your Name"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# File system
walkdir = "2"
notify = "6"
dirs = "5"

# Media processing
uuid = { version = "1", features = ["v4"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"

# Hashing
blake3 = "1"

# Date/time
chrono = "0.4"

# Regex
regex = "1"
lava_torrent = { version = "0.11.1", default-features = false }
base64 = "0.22.1"
parking_lot = "0.12.5"
sha1 = "0.11.0"
percent-encoding = "2.3.2"

[lints.rust]
dead_code = "allow"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
