[package]
name = "media-vault"
version = "0.1.0"
description = "Local Media Server"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-sidecar", "window-all", "path-all", "fs-all", "shell-execute", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
media-server = { path = ".." }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
